--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context=".MainFragment">
+    tools:context="com.andyccs.ntucsrepo.MainFragment">
 
     <TextView
         style="@style/Base.TextAppearance.AppCompat.Body1"
