--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,7 +20,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/resource_list"
+        android:id="@+id/resource_type_list"
         style="@style/MaterialLightListView" />
 
 </LinearLayout>
