--- a/app/src/main/res/layout/resource_text.xml
+++ b/app/src/main/res/layout/resource_text.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/resource_text_1"
         android:layout_centerVertical="true"
+        android:ellipsize="end"
+        android:maxLines="1"
         style="@style/Base.TextAppearance.AppCompat.Subhead" />
 
 </RelativeLayout>
