--- a/app/src/main/res/layout/resource_text_recycle.xml
+++ b/app/src/main/res/layout/resource_text_recycle.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="8dp"
     android:focusable="true"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:background="?android:attr/selectableItemBackground">
 
     <TextView
         android:layout_width="wrap_content"
