--- a/app/src/main/res/layout/fragment_resource_list.xml
+++ b/app/src/main/res/layout/fragment_resource_list.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <TextView
-            style="@style/Base.TextAppearance.AppCompat.Body1"
+            style="@style/Base.TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="10dp"
