--- a/app/src/main/res/layout/resource_text.xml
+++ b/app/src/main/res/layout/resource_text.xml
@@ -2,6 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:layout_height="48dp">
 
     <TextView
@@ -12,5 +14,13 @@
         android:maxLines="1"
         android:layout_centerVertical="true"
         style="@style/Base.TextAppearance.AppCompat.Subhead" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/ic_arrow_right_indicator"/>
 
 </RelativeLayout>
