--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,16 +1,20 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="8dp"
     android:paddingTop="8dp"
-    android:orientation="vertical"
-    tools:context="com.andyccs.ntucsrepo.MainFragment">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.andyccs.ntucsrepo.ResourceListFragment">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/resource_type_list"
-        style="@style/MaterialLightListView" />
+        android:animateLayoutChanges="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
 
-</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
