--- a/app/src/main/res/layout/resource_text.xml
+++ b/app/src/main/res/layout/resource_text.xml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:layout_height="48dp">
+    android:layout_height="48dp"
+    android:focusable="true"
+    android:clickable="true"
+    android:background="?android:attr/selectableItemBackground">
 
     <TextView
         android:layout_width="wrap_content"
